[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Map/Characters/EnemyCharacter.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/chars/final_meka_mongke.png" type="Texture" id=2]
[ext_resource path="res://Fonts/BoxesDream.ttf" type="DynamicFontData" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 115.786, 231.273 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 212.398, 308.276 )

[sub_resource type="Animation" id=3]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../MekaMongke/Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.9, 1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=4]
size = 256
outline_size = 4
outline_color = Color( 0, 0.486275, 1, 1 )
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=5]
resource_name = "anim"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -30, -450 ), Vector2( -30, -550 ), Vector2( -30, -450 ) ]
}

[node name="MekaMongke" type="StaticBody2D"]
scale = Vector2( 0.3, 0.3 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1.54972e-06, 0 )
texture = ExtResource( 2 )
offset = Vector2( 50, 0 )

[node name="Collider" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Detector" type="Area2D" parent="."]

[node name="Collider" type="CollisionShape2D" parent="Detector"]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/idle = SubResource( 3 )

[node name="ExlamationMark" type="Label" parent="."]
visible = false
margin_left = -30.0
margin_top = -450.0
margin_right = 3.0
margin_bottom = -218.0
custom_fonts/font = SubResource( 4 )
text = "!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Anim" type="AnimationPlayer" parent="ExlamationMark"]
autoplay = "anim"
anims/anim = SubResource( 5 )
[connection signal="body_entered" from="Detector" to="." method="_on_Detector_body_entered"]
[connection signal="body_exited" from="Detector" to="." method="_on_Detector_body_exited"]
